--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "private": true,
   "scripts": {
+    "build": "tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "start": "nodemon --exec node --trace-warnings --async-stack-traces -r dotenv/config -r ts-node/register src/index.ts"
+  },
+  "husky": {
+    "pre-commit": "pretty-quick --staged",
+    "pre-push": "yarn lint && yarn build"
   },
   "dependencies": {
     "@archax/ace-lib": "^0.6.14",
@@ -19,7 +24,6 @@
   },
   "devDependencies": {
     "@types/ip": "^1.1.0",
-    "@types/jest": "^26.0.14",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
@@ -28,12 +32,9 @@
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
-    "jest-junit": "^11.1.0",
-    "jira-prepare-commit-msg": "^1.5.2",
     "nodemon": "^2.0.7",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
-    "rimraf": "^3.0.2",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "typescript": "^3.7.4",
